# AI-Agent-Browser-Forensics

./: pyproject.toml
aabf/: __init__.py  cli.py  imaging.py  models.py  output.py  paths.py  reporting.py  signatures.py
aabf/analysis/: __init__.py  analyze.py  correlate.py  coverage.py  models.py  report.py  timestamps.py
aabf/collection/: __init__.py  base.py  local.py  report.py
aabf/collection/api/: __init__.py  base.py  browseros_api.py  comet_api.py  edge_api.py  fellou_api.py  genspark_api.py  sigma_api.py
aabf/identification/: __init__.py  identify.py  report.py
aabf/parsing/: __init__.py  parse.py  records.py  report.py
aabf/parsing/services/: __init__.py  base.py  browseros.py  comet.py  edge.py  fellou.py  genspark.py  sigma.py
aabf/utils/: __init__.py  dpapi.py  extstore.py  indexeddb.py  jsonlog.py  leveldb.py  localstorage.py  sqlite.py
